--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,9 @@ PyYAML==6.0
 regex==2022.10.31
 requests==2.28.2
 six==1.16.0
+tensorboard==2.12.0
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
 tokenizers==0.12.1
 tomli==2.0.1
 torch==1.11.0
