--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ kiwisolver==1.4.4
 matplotlib==3.6.3
 numpy==1.24.2
 packaging==23.0
+pandas==1.5.3
 Pillow==9.4.0
 pluggy==1.0.0
 pyparsing==3.0.9
